fix: fix tag input row gap

--- a/packages/pelagos/src/components/TagInput.less
+++ b/packages/pelagos/src/components/TagInput.less
@@ -7,7 +7,7 @@
 		flex-flow: row wrap;
 		align-items: center;
 		align-content: space-between;
-		column-gap: @sp-08;
+		gap: @sp-04 @sp-08;
 		background-color: var(--field);
 		border-bottom: 1px solid var(--border-strong);
 		// stylelint-disable-next-line @bluecateng/property-strict-value
